# beagle-client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_arm64.sh  build_x86_64.sh  config.ini.sample  main.cpp  toolchain-arm64.cmake  yacardemu.ini.sample
inc/: beagle_client.h  device_simulator.h  global.h  utility.h  yacardemu_client.h
src/: beagle_client.cpp  utility.cpp  yacardemu_client.cpp
